# YAERModLoader

./: .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  README.md  README.zhCN.md  YAERModLoader.ini  YAERModLoader.zhCN.ini
cmake/: CustomCompilerOptions.cmake  GenerateVersionInfo.cmake
docs/: me3-repo.md  (+2 more)
src/: CHANGELOG.md  CMakeLists.txt  YAERModLoader.ini  YAERModLoader.zhCN.ini  YAFSML.ini  YAFSML.zhCN.ini  detours_subset.h  launcher.c  launcher.rc  modloader.c
src/common/: allocator.c  allocator.h  ext_shared.c  ext_shared.h  khash_wstr.h  log.c  log.h
src/dll/: modloader.c
src/eldenring/: CMakeLists.txt  param.c  param.h  param_defs.h  param_internal.h  param_to_c.py  pointers.c  pointers.h  wstring.c  wstring.h
src/eldenring/defs/: actionbutton_param.h  ai_anim_tbl_param.h  ai_attack_param.h  ai_odds_param.h  ai_sound_param.h  ai_standard_info_bank.h  asset_geometory_param.h  asset_material_sfx_param.h  asset_model_sfx_param.h  atk_param.h  attack_element_correct_param.h  auto_create_env_sound_param.h  basechr_select_menu_param.h  behavior_param.h  bonfire_warp_param.h  bonfire_warp_sub_category_param.h  bonfire_warp_tab_param.h  buddy_param.h  buddy_stone_param.h  budget_param.h  bullet_create_limit_param.h  bullet_param.h  cacl_correct_graph.h  camera_fade_param.h  ceremony_param.h  character_init_param.h  charmakemenu_listitem_param.h  charmakemenutop_param.h  chr_activate_condition_param.h  chr_equip_model_param.h  chr_model_param.h  clear_count_correct_param.h  common_system_param.h  cool_time_param.h  cs_aa_quality_detail.h  cs_decal_quality_detail.h  cs_dof_quality_detail.h  cs_effect_quality_detail.h  cs_graphics_config_param.h  cs_key_assign_menuitem_param.h  (+154 more)
src/exe/: launcher.c
src/extdlls/: CMakeLists.txt
src/extdlls/almighty_kale/: CMakeLists.txt  almighty_kale.ini
src/extdlls/almighty_kale/src/: config.c  config.h  main.c  messages.c  messages.h  messages_by_lang.c  shop_hooks.c  shop_hooks.h  shops.c  shops.h  talkscript.c  talkscript.h  talkscript_utils.c  talkscript_utils.h
src/extdlls/autoloot/: exec_buttom_action_param_filter.asm  main.c
src/extdlls/er_param/: CMakeLists.txt  er_param.ini  param_to_c.py
src/extdlls/er_param/include/er_param/: er_param_api.h  param.h  param_defs.h  wstring.h
src/extdlls/er_param/include/er_param/defs/: actionbutton_param.h  ai_anim_tbl_param.h  ai_odds_param.h  ai_sound_param.h  ai_standard_info_bank.h  asset_geometory_param.h  asset_material_sfx_param.h  asset_model_sfx_param.h  basechr_select_menu_param.h  bonfire_warp_param.h  bonfire_warp_tab_param.h  buddy_param.h  buddy_stone_param.h  budget_param.h  bullet_create_limit_param.h  cacl_correct_graph.h  camera_fade_param.h  character_init_param.h  charmakemenu_listitem_param.h  chr_equip_model_param.h  chr_model_param.h  common_system_param.h  cool_time_param.h  cs_aa_quality_detail.h  cs_dof_quality_detail.h  cs_effect_quality_detail.h  cs_graphics_config_param.h  cs_lighting_quality_detail.h  cs_motion_blur_quality_detail.h  cs_reflection_quality_detail.h  cs_shadow_quality_detail.h  cutscene_map_id_param.h  cutscene_texture_load_param.h  cutscene_timezone_convert_param.h  decal_param.h  default_key_assign.h  direction_camera_param.h  env_obj_lot_param.h  equip_mtrl_set_param.h  equip_param_accessory.h  (+84 more)
src/extdlls/er_param/include/er_param/from/: ezstate.h  game_data.h  messages.h  talk_commands.h
src/extdlls/er_param/src/: param.c  param_internal.h  pointers.c  pointers.h  provider.c  wstring.c
src/extdlls/itemlot_rate/: itemlot_rate.ini  itemlot_rate.zhCN.ini  main.c
src/extdlls/no_dup_loot/: main.c
src/extdlls/no_dup_pick/: main.c
src/from/: abi_msvc2012.h  abi_msvc2015.h
src/game/: CMakeLists.txt  context.c  game.h  registry.c
src/launcher/: CMakeLists.txt  detours_subset.h  launch_config.c  launch_config.h  launcher.c
src/modloader/: CMakeLists.txt  config.c  config.h  detours_subset.h  dl_allocator.c  dl_allocator.h  extdll.c  extdll.h  extdll_api.h  filecache.c  filecache.h  gamehook.c  gamehook.h  hook.c  hook.h  hook_batch.c  hook_batch.h  lifecycle.c  lifecycle.h  mimalloc_allocator.c  mimalloc_allocator.h  mod.c  mod.h  modloader.c  path_convert.c  path_convert.h  processutil.c  processutil.h  versioninfo.rc.in  vfs.c  vfs.h
src/modloader/patches/: allocator.c  allocator.h  asset_hooks.c  asset_hooks.h  asset_sig.c  asset_sig.h  common.c  common.h  darksouls3.c  darksouls3.h  dl_device.c  dl_device.h  eldenring.c  eldenring.h  eldenring_assets.c  eldenring_assets.h  logo.c  logo.h  properties.c  properties.h  properties_hook.asm  regulation.c  regulation.h  runtime_ready.c  runtime_ready.h  save_mapping.c  save_mapping.h  sekiro.c  sekiro.h  win32_hooks.c  win32_hooks.h  window_flash.c  window_flash.h  wwise_path.c  wwise_path.h
src/modloader/proxy/: common.c  common.h  dinput8.c  dinput8.def  dinput8.h  dxgi.c  proxy_stubs.asm  winhttp.c  winhttp.def  winhttp.h
src/process/: CMakeLists.txt  cpu_affinity.c  cpu_affinity.h  dlrf.c  dlrf.h  fd4_step.c  fd4_step.h  image.c  image.h  pe.c  pe.h  rip_scan.c  rip_scan.h  rtti.c  rtti.h  scanner.c  scanner.h  singleton.c  singleton.h  undname.c  undname.h  util.c  util.h
src/steam/: CMakeLists.txt  api.c  api.h  app.c  app.h  vdf.c  vdf.h
src/tools/: embeddll.c
tests/: CMakeLists.txt  smoke_asset_hooks.c  smoke_cpu_affinity.c  smoke_dl_device.c  smoke_dlrf.c  smoke_extdll_config.c  smoke_fd4_step.c  smoke_filecache.c  smoke_filecache_mt.c  smoke_game_registry.c  smoke_hook.c  smoke_hook_batch.c  smoke_khash_wstr.c  smoke_launcher_game.c  smoke_lifecycle.c  smoke_log.c  smoke_logo.c  smoke_mimalloc_allocator.c  smoke_mod_routing.c  smoke_msvc_abi.c  smoke_no_dup_loot.c  smoke_no_global_minhook.c  smoke_no_modloader_ext_api.c  smoke_param.c  smoke_path_convert.c  smoke_pe_sections.c  smoke_rip_scan.c  smoke_rtti.c  smoke_save_mapping.c  smoke_save_mapping_mt.c  smoke_scanner.c  smoke_undname.c  smoke_vfs.c  smoke_vfs_generation_mt.c  smoke_vfs_writable_mt.c  smoke_win32_hooks.c  smoke_window_flash.c  smoke_wwise_path.c  smoke_xxh3.c  test_common.h
(+5 files in other folders)
